@@ -1,3 +1,7 @@
+* 2014-06-12 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 33094: Invalidate folder and subfolders in cache folder storage on "clear" operation  
+
 * 2014-06-11 - thorben.betten@open-xchange.com
 
  - Fix for bug 33061: Ignore alternative HTML part nested inside multipart/related part if text-only is user's preference
